--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,10 @@
 {
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "arrowParens": "always",
-  "max-len": ["error", 140, 2],
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "max-len": ["error", 90, 2],
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "printWidth": 80
 }
