--- a/package.json
+++ b/package.json
@@ -1,48 +1,41 @@
 {
-	"name": "webpack-intro",
-	"version": "1.0.0",
-	"description": "",
-	"private": "true",
-	"scripts": {
-		"start": "npx webpack serve --config webpack.config.dev.js",
-		"build": "npx webpack --config webpack.config.prod.js",
-		"build:dev": "npx webpack --config webpack.config.dev.js",
-		"lint": "npx eslint ./src"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@eslint/js": "^9.3.0",
-		"babel-eslint": "^10.1.0",
-		"copy-webpack-plugin": "^12.0.2",
-		"css-loader": "^7.1.1",
-		"css-minimizer-webpack-plugin": "^7.0.0",
-		"eslint": "^9.3.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-prettier": "^5.1.3",
-		"globals": "^15.2.0",
-		"html-webpack-plugin": "^5.6.0",
-		"mini-css-extract-plugin": "^2.9.0",
-		"postcss": "^8.4.38",
-		"postcss-loader": "^8.1.1",
-		"postcss-preset-env": "^9.5.13",
-		"sass": "^1.77.1",
-		"sass-loader": "^14.2.1",
-		"style-loader": "^4.0.0",
-		"terser-webpack-plugin": "^5.3.10",
-		"webpack": "^5.91.0",
-		"webpack-bundle-analyzer": "^4.10.2",
-		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^5.0.4",
-		"webpack-merge": "^5.10.0"
-	},
-	"eslintConfig": {
-		"extends": [
-			"prettier"
-		],
-		"plugins": [
-			"prettier"
-		]
-	}
+  "name": "webpack-intro",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "",
+  "private": "true",
+  "scripts": {
+    "start": "npx webpack serve --config webpack.config.dev.js",
+    "build": "npx webpack --config webpack.config.prod.js",
+    "build:dev": "npx webpack --config webpack.config.dev.js",
+    "lint": "npx eslint ./src"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "babel-eslint": "^10.1.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.1",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "eslint": "^9.4.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.3.0",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^9.5.13",
+    "sass": "^1.77.1",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^5.10.0"
+  }
 }
